pihole/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole-external-1
  namespace: pihole
  labels:
    kubernetes.io/service-name: pihole-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.2.72"
