pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-external
  namespace: pihole
spec:
  ports:
    - port: 80
      targetPort: 80
