pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Groups,Remote-Name,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.jacquesops.site/?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local:9091/api/verify
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: pihole
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.jacquesops.site
    http:
      paths:
      - backend:
          service:
            name: pihole-external
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pihole.jacquesops.site
    secretName: pihole-jacquesops-tls
